chore: fix swagger
